[package]
name = "localstorage_adapter"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

[[bin]]
name = "localstorage_adapter"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.6.11"  }
wasm-tracing-allocator = "0.1.1"
log = "0.4.8"
prdao_shared = { path = "../_prdao_shared" }
