[package]
name = "facade"
version = "0.1.0"
authors = ["JRM"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dns_facade"
path = "src/main.rs"

[dependencies]
prdao_shared = { path = "../../_prdao_shared" }
marine-rs-sdk = { version = "=0.6.15" }

