[package]
name = "facade"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
prdao_shared = { path = "../../_prdao_shared" }
serde = "1.0.118"
serde_json = "1.0.64"
marine-rs-sdk = { version = "=0.6.15"  }
tiny-keccak = "1.4.2"
ethers-core = { git = "https://github.com/Joera/ethers-core-0.1.3" }
hex = "0.4.3"
hex-literal = "0.3.3"
ethabi = "14.1.0"
ethabi-contract = "11.0.0"
ethabi-derive = "14.1.0"
slugify = "0.1.0"