[package]
name = "facade"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
prdao_shared = { path = "../../_prdao_shared" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
marine-rs-sdk = { version = "=0.6.15", features = ["logger"] }
graphql_client = "0.10.0"
bytes = "1.1.0"
generic-bytes-derive = "0.2.1"
base64 = "0.13.0"
hex = "0.3.1"
