[package]
name = "facade"
version = "0.1.0"
authors = ["JRM"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
prdao_shared = { path = "../../_prdao_shared" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
marine-rs-sdk = { version = "=0.6.15"  }
log = "0.4.8"
chrono = "0.4.19"
indexmap = "1.7.0"
handlebars = "4.1.6"
tempfile = "3.2.0"
libipld-core = "0.12.0"
libipld-pb = "0.12.0"
blob = "0.3.0"
num = "0.4.0"